fix links on mobile (#571)

--- a/input/assets/css/override.less
+++ b/input/assets/css/override.less
@@ -295,6 +295,9 @@ pre {
 p a {
 	border-bottom: 1px dashed #319af3;
 	text-decoration: none;
+  @media (max-width: 767px) {
+    word-break: break-word;
+  }
 }
 p a:hover {
 	border-bottom: 1px solid #319af3;
